<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="@dimen/spacing_md"
    android:paddingEnd="@dimen/spacing_md"
    android:background="@color/white"
    tools:context=".presentation.ui.signin.SignInFragment">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_md"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back_arrow"
                android:contentDescription="@string/back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/black"/>

            <TextView
                android:id="@+id/tv_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="@dimen/text_sm"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_md"
        app:layout_constraintTop_toBottomOf="@id/layout_header"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_sign_in_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_screen_title"
            android:textSize="@dimen/text_xl"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_sign_in_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_screen_subtitle"
            android:textSize="@dimen/text_sm"
            android:textColor="@color/body_text"
            android:layout_marginTop="@dimen/spacing_md"
            android:layout_marginEnd="@dimen/spacing_2xl"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_title"/>

        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_email_address"
            android:textSize="@dimen/text_caption"
            android:textAllCaps="true"
            android:textColor="@color/body_text"
            android:layout_marginTop="@dimen/spacing_lg"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_subtitle"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/hint_email"
            android:background="@drawable/edittext_underline"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="@dimen/spacing_xs"
            app:layout_constraintTop_toBottomOf="@id/tv_email_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/tv_password_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/label_password"
            android:textAllCaps="true"
            android:textColor="@color/body_text"
            android:textSize="@dimen/text_caption"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ic_visible"
            android:layout_marginEnd="@dimen/spacing_sm"
            />

        <ImageView
            android:id="@+id/ic_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_eye_off"
            android:layout_marginStart="@dimen/spacing_sm"
            app:layout_constraintBottom_toBottomOf="@id/tv_password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_password_label"
            app:tint="@color/body_text" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/hint_password"
            android:background="@drawable/edittext_underline"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/spacing_xs"
            app:layout_constraintTop_toBottomOf="@id/tv_password_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_header"
            android:textColor="@color/body_text"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing_md"
            app:layout_constraintTop_toBottomOf="@id/et_password"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:background="@drawable/button_orange"
            android:layout_marginTop="@dimen/spacing_lg"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_no_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/body_text"
            android:layout_marginTop="@dimen/spacing_lg"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_create_account"/>

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/active_color"
            android:layout_marginStart="@dimen/spacing_xs"
            app:layout_constraintTop_toTopOf="@id/tv_no_account_text"
            app:layout_constraintBottom_toBottomOf="@id/tv_no_account_text"
            app:layout_constraintStart_toEndOf="@id/tv_no_account_text"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
