<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_color"
    tools:context=".presentation.ui.forgotpassword.ResetEmailSentFragment">

    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/img_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_md">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_back_arrow_left" />

                <TextView
                    android:id="@+id/tv_header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_md"
                    android:text="@string/forgot_password_header"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_sm"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- CONTENT -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_background"
                android:padding="@dimen/spacing_xl">

                <TextView
                    android:id="@+id/tv_sign_in_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_email_title"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_xl"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_sign_in_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_md"
                    android:text="@string/reset_email_subtitle"
                    android:textColor="@color/body_text"
                    android:textSize="@dimen/text_sm"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_in_title" />

                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_lg"
                    android:background="@drawable/button_orange"
                    android:text="@string/re_send"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_sign_in_subtitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/img_coffee"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="@dimen/spacing_xl"
        android:scaleType="centerInside"
        android:src="@drawable/img_coffee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_content" />

</androidx.constraintlayout.widget.ConstraintLayout>