<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_color"
    tools:context=".presentation.ui.authentication.fingerprint.FingerPrintFragment">

    <!-- Yellow Header Container -->
    <LinearLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_color"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back_arrow_left"
                android:contentDescription="@string/back"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_your_fingerprint"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <!-- White Content Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/content_background"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp">
            <!-- Description Text -->
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/fingerprint_description"
                android:textColor="@color/body_text"
                android:textSize="14sp"
                android:layout_marginTop="10dp" />

            <!-- Fingerprint Icon -->
            <ImageView
                android:id="@+id/iv_fingerprint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/ic_finger_print"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/set_your_fingerprint"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Skip Button -->
            <Button
                android:id="@+id/btn_skip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/main_color"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:layout_marginTop="40dp"
                app:layout_constraintWidth_percent="0.4"
                android:background="@drawable/search_input"
                app:layout_constraintTop_toBottomOf="@id/iv_fingerprint"
                app:layout_constraintStart_toStartOf="parent"/>

            <!-- Continue Button -->
            <Button
                android:id="@+id/btn_setup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/setup"
                app:layout_constraintWidth_percent="0.4"
                android:background="@drawable/button_orange"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_skip"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
